--- a/LiveStone/LSTimePanelViewCell.xib
+++ b/LiveStone/LSTimePanelViewCell.xib
@@ -89,7 +89,7 @@
                             <constraint firstAttribute="width" secondItem="NZt-8y-cZm" secondAttribute="height" multiplier="1:1" id="SJx-Ol-YSl"/>
                             <constraint firstAttribute="width" constant="50" id="wnp-9k-0Kt"/>
                         </constraints>
-                        <state key="normal" title="开始 代祷">
+                        <state key="normal" title="代祷">
                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <userDefinedRuntimeAttributes>
