--- a/LiveStone/LSTimePanelViewCell.xib
+++ b/LiveStone/LSTimePanelViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="rzM-xA-G6Y">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="rzM-xA-G6Y" customClass="LSTimePanelViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rzM-xA-G6Y" id="wyk-E1-H9a">
@@ -97,6 +97,9 @@
                                 <integer key="value" value="25"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
+                        <connections>
+                            <action selector="intercessionClick:" destination="rzM-xA-G6Y" eventType="touchUpInside" id="6vV-Be-Kcj"/>
+                        </connections>
                     </button>
                 </subviews>
                 <constraints>
