--- a/LiveStone/Base.lproj/LaunchScreen.storyboard
+++ b/LiveStone/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,20 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="VVL-9j-evS">
+                                <rect key="frame" x="260" y="84" width="80" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="Kle-TZ-nwO"/>
+                                    <constraint firstAttribute="width" constant="80" id="cxi-wm-arB"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="VVL-9j-evS" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="64" id="Two-LB-UxC"/>
+                            <constraint firstItem="VVL-9j-evS" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="a6t-OV-mz8"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +37,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Logo" width="85" height="85"/>
+    </resources>
 </document>
