1. 新增第三方应用白名单 2. 修复代祷详情评论性别显示错误问题

--- a/LiveStone/Base.lproj/Main.storyboard
+++ b/LiveStone/Base.lproj/Main.storyboard
@@ -1325,6 +1325,6 @@
         <image name="UserDefaultAvatar" width="60" height="60"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="hjP-WS-tvB"/>
+        <segue reference="PPq-hw-LP8"/>
     </inferredMetricsTieBreakers>
 </document>
